third_party/move/move-compiler-v2/tests/more-v1/parser/function_without_body.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/function_without_body.move:3:13
  │
3 │     fun fn();
  │             ^
  │             │
  │             Unexpected ';'
  │             Expected '{'
